--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Cheezecake Blog</title>
-    <%= favicon_link_tag('favicon.ico') %>
+    <%= favicon_link_tag('/favicon.ico') %>
 
     <%#= csrf_meta_tags %>
     <%= csp_meta_tag %>
