--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -42,6 +42,12 @@ a {
     opacity: 0.6;
 }
 
+blockquote {
+    color: #666;
+    margin: 0;
+    padding-left: 3em;
+    border-left: 0.5em #eee solid;
+}
 
 /*---------------------------------------------------------------------*/
 .p-0 { padding: 0; }
