--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -1,234 +1,17 @@
-a {
-    color: rgba(0, 0, 0, 0.87);
+@import "semantic_override";
+@import "float_menu";
+@import "react_markdown";
+@import "dropzone";
+@import "margin_padding";
+
+html, body{
+    overflow-x: hidden;
 }
 
 .main {
     min-height: calc(100vh - 136px);
 }
 
-
-/*-----------------------------------------*/
-.container {
-    display: flex;
-    flex-direction: column;
-    font-family: sans-serif;
-}
-
-.container > p {
-    font-size: 1rem;
-}
-
-.container > em {
-    font-size: .8rem;
-}
-
-.dropzone {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border-width: 2px;
-    border-radius: 2px;
-    border-color: #eeeeee;
-    border-style: dashed;
-    background-color: #fafafa;
-    color: #bdbdbd;
-    outline: none;
-    transition: border .24s ease-in-out;
-}
-
-.dropzone:focus {
-    border-color: #2196f3;
-}
-
-.dropzone.disabled {
-    opacity: 0.6;
-}
-
-blockquote {
-    color: #6F6F6F;
-    border-left: 4px solid #6F6F6F;
-    padding: 0em 2em;
-    margin: 1em 0em 2em;
-}
-
-code:not([class*="hljs"]) {
-    font-size: 87.5%;
-    line-height: 1.4;
-    background-color: #f8f8f8;
-    border-radius: 3px;
-    white-space: pre;
-    display: inline-block;
-    border: 1px solid #ddd;
-    color: #e01e5a;
-}
-
-code:not([class*="hljs"])::before {
-    letter-spacing: -0.2em;
-    content: '\00a0';
-}
-
-code:not([class*="hljs"])::after {
-    letter-spacing: -0.2em;
-    content: '\00a0';
-}
-
-/*---------------------------------------------------------------------*/
-.p-0 { padding: 0; }
-.p-1 { padding: 1px; }
-.p-2 { padding: 2px; }
-.p-3 { padding: 3px; }
-.p-4 { padding: 4px; }
-.p-5 { padding: 5px; }
-.p-6 { padding: 6px; }
-.p-7 { padding: 7px; }
-.p-8 { padding: 8px; }
-.p-9 { padding: 9px; }
-.p-10 { padding: 10px; }
-.p-l-0 { padding-left: 0; }
-.p-l-1 { padding-left: 1px; }
-.p-l-2 { padding-left: 2px; }
-.p-l-3 { padding-left: 3px; }
-.p-l-4 { padding-left: 4px; }
-.p-l-5 { padding-left: 5px; }
-.p-l-6 { padding-left: 6px; }
-.p-l-7 { padding-left: 7px; }
-.p-l-8 { padding-left: 8px; }
-.p-l-9 { padding-left: 9px; }
-.p-l-10 { padding-left: 10px; }
-.p-r-0 { padding-right: 0; }
-.p-r-1 { padding-right: 1px; }
-.p-r-2 { padding-right: 2px; }
-.p-r-3 { padding-right: 3px; }
-.p-r-4 { padding-right: 4px; }
-.p-r-5 { padding-right: 5px; }
-.p-r-6 { padding-right: 6px; }
-.p-r-7 { padding-right: 7px; }
-.p-r-8 { padding-right: 8px; }
-.p-r-9 { padding-right: 9px; }
-.p-r-10 { padding-right: 10px; }
-.p-t-0 { padding-top: 0; }
-.p-t-1 { padding-top: 1px; }
-.p-t-2 { padding-top: 2px; }
-.p-t-3 { padding-top: 3px; }
-.p-t-4 { padding-top: 4px; }
-.p-t-5 { padding-top: 5px; }
-.p-t-6 { padding-top: 6px; }
-.p-t-7 { padding-top: 7px; }
-.p-t-8 { padding-top: 8px; }
-.p-t-9 { padding-top: 9px; }
-.p-t-10 { padding-top: 10px; }
-.p-b-0 { padding-bottom: 0; }
-.p-b-1 { padding-bottom: 1px; }
-.p-b-2 { padding-bottom: 2px; }
-.p-b-3 { padding-bottom: 3px; }
-.p-b-4 { padding-bottom: 4px; }
-.p-b-5 { padding-bottom: 5px; }
-.p-b-6 { padding-bottom: 6px; }
-.p-b-7 { padding-bottom: 7px; }
-.p-b-8 { padding-bottom: 8px; }
-.p-b-9 { padding-bottom: 9px; }
-.p-b-10 { padding-bottom: 10px; }
-
-.m-0 { margin: 0; }
-.m-1 { margin: 1px; }
-.m-2 { margin: 2px; }
-.m-3 { margin: 3px; }
-.m-4 { margin: 4px; }
-.m-5 { margin: 5px; }
-.m-6 { margin: 6px; }
-.m-7 { margin: 7px; }
-.m-8 { margin: 8px; }
-.m-9 { margin: 9px; }
-.m-10 { margin: 10px; }
-.m-l-0 { margin-left: 0; }
-.m-l-1 { margin-left: 1px; }
-.m-l-2 { margin-left: 2px; }
-.m-l-3 { margin-left: 3px; }
-.m-l-4 { margin-left: 4px; }
-.m-l-5 { margin-left: 5px; }
-.m-l-6 { margin-left: 6px; }
-.m-l-7 { margin-left: 7px; }
-.m-l-8 { margin-left: 8px; }
-.m-l-9 { margin-left: 9px; }
-.m-l-10 { margin-left: 10px; }
-.m-l-20 { margin-left: 20px; }
-.m-r-0 { margin-right: 0; }
-.m-r-1 { margin-right: 1px; }
-.m-r-2 { margin-right: 2px; }
-.m-r-3 { margin-right: 3px; }
-.m-r-4 { margin-right: 4px; }
-.m-r-5 { margin-right: 5px; }
-.m-r-6 { margin-right: 6px; }
-.m-r-7 { margin-right: 7px; }
-.m-r-8 { margin-right: 8px; }
-.m-r-9 { margin-right: 9px; }
-.m-r-10 { margin-right: 10px; }
-.m-r-20 { margin-right: 20px; }
-.m-t-0 { margin-top: 0; }
-.m-t-1 { margin-top: 1px; }
-.m-t-2 { margin-top: 2px; }
-.m-t-3 { margin-top: 3px; }
-.m-t-4 { margin-top: 4px; }
-.m-t-5 { margin-top: 5px; }
-.m-t-6 { margin-top: 6px; }
-.m-t-7 { margin-top: 7px; }
-.m-t-8 { margin-top: 8px; }
-.m-t-9 { margin-top: 9px; }
-.m-t-10 { margin-top: 10px; }
-.m-t-20 { margin-top: 20px; }
-.m-b-0 { margin-bottom: 0; }
-.m-b-1 { margin-bottom: 1px; }
-.m-b-2 { margin-bottom: 2px; }
-.m-b-3 { margin-bottom: 3px; }
-.m-b-4 { margin-bottom: 4px; }
-.m-b-5 { margin-bottom: 5px; }
-.m-b-6 { margin-bottom: 6px; }
-.m-b-7 { margin-bottom: 7px; }
-.m-b-8 { margin-bottom: 8px; }
-.m-b-9 { margin-bottom: 9px; }
-.m-b-10 { margin-bottom: 10px; }
-.m-b-20 { margin-bottom: 20px; }
-
-.ui.dimmer {
-    background-color: rgba(0, 0, 0, .5);
-}
-
-
-/* Float Menu */
-ul.float-menu {
-    position: fixed;
-    right: 50%;
-    margin-right: -550px;
-    border: solid 1px lightgrey;
-    background-color: #faf9f5;
-    /*width: 100px;*/
-    list-style: none;
-    padding-left: 0;
-
-    li {
-        text-align: center;
-        color: lightgrey;
-        line-height: 50px;
-        width: 100px;
-    }
-}
-
-@media only screen and (max-width: 1150px) {
-    ul.float-menu {
-        margin-right: -470px;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    ul.float-menu {
-        position: unset;
-        margin-right: 0;
-
-        li {
-            display: inline;
-            padding: 0 30px;
-        }
-    }
+a {
+    color: rgba(0, 0, 0, 0.87);
 }
