--- a/app/javascript/css/react_markdown.scss
+++ b/app/javascript/css/react_markdown.scss
@@ -8,14 +8,15 @@ blockquote {
 
 // `string`
 code:not([class*="hljs"]) {
-  font-size: 87.5%;
+  font-size: 90%;
   line-height: 1.4;
   background-color: #f8f8f8;
   border-radius: 3px;
   white-space: pre;
-  display: inline-block;
+  //display: inline-block;
   border: 1px solid #ddd;
   color: #e01e5a;
+  padding-top: 1px;
 
   &:before {
     letter-spacing: -0.2em;
