--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cheezecake Blog</title>
+    <title>PEACE OF CAKE</title>
     <%= favicon_link_tag('favicon.ico') %>
 
     <%#= csrf_meta_tags %>
