--- a/web_client/css/application.scss
+++ b/web_client/css/application.scss
@@ -3,6 +3,7 @@
 @import "react_markdown";
 @import "dropzone";
 @import "margin_padding";
+@import "components/all";
 
 html, body{
     overflow-x: hidden;
