--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
   </head>
   <body>
     <%= yield %>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-    </script>
+<!--    <script>-->
+<!--        window.dataLayer = window.dataLayer || [];-->
+<!--        function gtag() { dataLayer.push(arguments); }-->
+<!--        gtag('js', new Date());-->
+<!--    </script>-->
   </body>
 </html>
