Refactored with Next.js (#23)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,15 +17,15 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <%= javascript_include_tag 'https://www.googletagmanager.com/gtag/js?id=UA-142403750-1' %>
 
-    <%= javascript_pack_tag 'application' %>
-    <%= stylesheet_pack_tag 'application' %>
+    <%#= javascript_pack_tag 'application' %>
+    <%#= stylesheet_pack_tag 'application' %>
   </head>
   <body>
     <%= yield %>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-    </script>
+<!--    <script>-->
+<!--        window.dataLayer = window.dataLayer || [];-->
+<!--        function gtag() { dataLayer.push(arguments); }-->
+<!--        gtag('js', new Date());-->
+<!--    </script>-->
   </body>
 </html>
